# PatternPerfector

./: .pre-commit-config.yaml  pyproject.toml  tox.ini
tests/: test_patternperfector.py
