[tool.poetry]
name = "PatternPerfector"
version = "0.1.0"
description = ""
authors = ["Jasper Sival <jaspersival@gmail.com>"]

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

packages = [
    { include = "patternperfector", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"

# Optional dependencies meant for tox, install -E tox
tox = {version = ">=3.12", optional = true }
tox-venv = {version = ">=0.4.0", optional = true }

# Optional dependencies meant for pytest, install -E testing
pytest = {version = ">=6.2.2", optional = true }
pytest-env = {version = ">=0.6.2", optional = true }
pytest-mock = {version = ">=2.0.0", optional = true }
pytest-html = {version = ">=1.20", optional = true }
pytest-datadir = {version = ">=1.3.1", optional = true }
coverage = {version = ">=5.0.3", optional = true }
isort = "^5.7.0"

[tool.poetry.dev-dependencies]
# Other developer dependencies, install poetry -E developer
black = {version = "==20.8b1", allow-prereleases = true}
flake8 = {version = ">=3.5", optional = true }
flake8_formatter_abspath = {version = ">=1.0.0", optional = true }
isort = {version = ">=5.5", optional = true }
mypy = {version = ">=0.761", optional = true }
bandit = {version = ">=1.6.2", optional = true }
safety = {version = ">=1.8.5", optional = true }
pytest-cov = "^2.10.1"
pre-commit = "^2.10.1"

[tool.poetry.extras]
tox = ["tox", "tox-venv"]
testing = ["pytest", "pytest-env", "pytest-mock", "pytest-html", "pytest-datadir", "coverage"]
developer = ["black", "flake8", "flake8_formatter_abspath", "isort", "pre-commit", "mypy", "bandit", "safety"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
